# coreason_etl_faers

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  bulletproof_test.py  docker-compose.yaml  index.html  llms.txt  pyproject.toml  test_url.py  zensical.toml
.github/workflows/: ci.yml
docs/: index.md
src/coreason_etl_faers/: __init__.py  bronze_ingestion.py  config.py  extractor.py  gold_schema.py  main.py  orchestrator_bronze.py  orchestrator_gold.py  orchestrator_silver.py  silver_deduplication.py  silver_identity.py  silver_meddra.py  streamer.py
src/coreason_etl_faers/utils/: __init__.py  http.py  logger.py
tests/: conftest.py  test_bronze_ingestion.py  test_cli.py  test_config.py  test_extractor.py  test_gold_schema.py  test_main.py  test_orchestrator_bronze.py  test_orchestrator_gold.py  test_orchestrator_silver.py  test_silver_deduplication.py  test_silver_identity.py  test_silver_meddra.py  test_streamer.py  test_utils.py
